This is my latest commit

--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <title>For HTML</title>
-    <!-- git clone (url) 
-         touch hello.html
-        git add (hello.html)-->
+    <!-- 
+       First open GIT BASH
+       git clone (url of repository) 
+       touch hello.html
+       git add (hello.html)
+       git commit -m "message"
+       git status
+       git push
+       -->
   </head>
   <body>
     Hello World !
