--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
     <!-- git commit -am ... for all -->
   </head>
   <body>
-    Hello World !
+    <h2>Hello World !</h2>
     <h1>HI HELLO MAN</h1>
   </body>
 </html>
