--- a/hello.html
+++ b/hello.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     Hello World !
-    <h1>HI HELLO MAN</h1>
+    <h1 style="color: blue">HI HELLO MAN</h1>
   </body>
 </html>
