move style properties

--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      h1 {
+        color: blue;
+      }
+    </style>
     <title>For HTML</title>
     <!-- 
        First open GIT BASH
@@ -13,11 +18,18 @@
        -->
     <!-- git commit -am ... for all 
          git commit -am "Fix merge conflict"-->
+    <!-- gitlog...if you want to keep track of all changes
+         gitrest....if you want to go back to previous commit
+         gitreset --hard <commit>
+          gitreset --hard origin/master
+    -->
+    <!-- git branch.... tell me the current branch
+         git checkout -b (name) -->
   </head>
   <body>
     <h2>Hello World !</h2>
     <h1>HI HELLO MAN</h1>
     Hello World !
-    <h1 style="color: blue">HI HELLO MAN</h1>
+    <h1>HI HELLO MAN</h1>
   </body>
 </html>
