--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
          git commit -am "Fix merge conflict"-->
   </head>
   <body>
-    <h2>Hello World !</h2>
+    <h2>Hello World</h2>
     <h1>HI HELLO MAN</h1>
     Hello World !
     <h1 style="color: blue">HI HELLO MAN</h1>
