--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       h1 {
-        color: blue;
+        color: red;
       }
     </style>
     <title>For HTML</title>
@@ -27,7 +27,7 @@
          git checkout -b (name) -->
   </head>
   <body>
-    <h2>Hello World</h2>
+    <h2>Hell World</h2>
     <h1>HI HELLO MAN</h1>
     Hello World !
     <h1>HI HELLO MAN</h1>
